--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conch",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "An Electronic Editor",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -13,7 +13,7 @@
   "author": "Gaakei",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^2.0.0"
+    "electron": "latest"
   },
   "dependencies": {}
 }
